adicionando cadastro de recursos
